# Spec-Kit-Rehabilitation

./: .gitignore  .pre-commit-config.yaml  .speckit.toml  CAN_THIS_BECOME_REAL.md  CHANGELOG-REHABILITATION.md  CHANGELOG.md  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_SUMMARY.md  FIXES_VERIFICATION_REPORT.md  FIX_SUMMARY.md  FORK_COMPLETE.md  GIT_PUSH_SUMMARY.md  HOW_TO_FORK.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY_v0.1.0a3.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_EXECUTIVE_SUMMARY.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PHASE_4_PLANNING.md  PHASE_5_PLAN.md  PROJECT_HANDOFF.md  PROJECT_SPEC.md  PR_8_COMPLETE.md  QUICK_START_IMPLEMENTATION.md  README.md  README_FOR_USER.md  RELEASE_CANDIDATE_v1.0.0-rc1.md  RELEASE_NOTES_v0.1.0a4.md  RELEASE_READY_v0.1.0a3.md  ROADMAP_TO_LEGITIMACY.md  SESSION_SUMMARY.md  TEST_TRACKING.md  UPDATED_CODEBASE_ANALYSIS_REPORT.md  YES_THIS_HELPS.md  cleanup-repository.sh  pyproject.toml  (+1 more)
.github/: AI_AGENT_INSTRUCTIONS.md
.github/workflows/: ci.yml  code-scanning.yml  coverage.yml  pre-commit.yml  specify-audit.yml  test.yml
.github/workflows/scripts/: create-release-packages.sh
.speckit/analysis/: security-report.md
Review/: CRITICAL_ASSESSMENT.md  DEPENDENCIES_AND_TESTING.md  FILE_ORGANIZATION.md  FINAL_ASSESSMENT_AND_NEXT_STEPS.md  IMPLEMENTATION_ROADMAP.md  PHASE_2.5_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  SESSION_SUMMARY.md  review1.md  review2.md  review3.md
Review/archive/: FORK_AND_REPOSITORY_FIX.md  HONEST_ASSESSMENT.md  LIMITATIONS.md  PROJECT-REHABILITATION.md  QUICK_START_IMPLEMENTATION.md  REHABILITATION-ENHANCEMENT-SUMMARY.md  STRUCTURE_ANALYSIS.md  STRUCTURE_GUIDE.md  STRUCTURE_QUICK_ANSWER.md
docs/: HANDOFF.md  architecture.md  ci_examples.md  configuration.md  installation.md  security-scanning.md
docs/planning/: DEVELOPMENT_WORKFLOW.md  GIT_PUSH_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.1.0a3.md  PHASE3_PLAN.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PHASE_4_EXECUTIVE_SUMMARY.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PHASE_4_REVISED_PLAN.md  PR4_PACKAGE_IMPROVEMENTS.md  PROJECT_SPEC.md  PYPI_DISTRIBUTION_SUMMARY.md
docs/releases/: GITHUB_RELEASE_v1.0.0-rc1.md  RELEASE_READY_v0.1.0a3.md
docs/reviews/: FINAL_REVIEW_REPORT.md
docs/sessions/: COMPREHENSIVE_CODE_REVIEW.md  DOCUMENTATION_SUMMARY.md  FINAL_REVIEW_REPORT.md  FIXES_VERIFICATION_REPORT.md  FORK_AND_REPOSITORY_FIX.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE_4_PLANNING.md  PHASE_4_REVISED_PLAN.md  PR4_PACKAGE_IMPROVEMENTS.md  PUSH_SUMMARY.md  SESSION_SUMMARY.md  TEST_RESULTS_PHASE1.md  YES_THIS_HELPS.md
memory/: constitution.md
scripts/: README.md  sync_version.py
src/: README.md
src/.speckit/analysis/: last_run.json  report.html  report.sarif
src/specify_cli/: __init__.py  agent_config.py  baseline.py  cli.py  compat.py  config.py  console.py  errors.py  gitutils.py  http.py  logging.py  logging_config.py  runner.py  store.py  verbose.py
src/specify_cli/analyzers/: README.md  __init__.py  bandit_analyzer.py  safety_analyzer.py
src/specify_cli/commands/: README.md  __init__.py  audit.py  doctor.py  init.py  init_impl.py
src/specify_cli/github/: __init__.py  auth.py  download.py  extraction.py
src/specify_cli/reporters/: README.md  __init__.py  html.py  sarif.py  sarif_bandit.py
src/specify_cli/ui/: __init__.py  banner.py  selector.py  tracker.py
src/specify_cli/vscode/: __init__.py  settings.py
templates/: .speckit.toml.example  README.md
templates/commands/: audit.md  checklist.md  compare.md  implement.md  migrate.md  reverse-engineer.md  specify.md  upgrade.md
tests/: README.md  __init__.py  test_audit_command.py  test_bandit_integration.py  test_baseline.py  test_baseline_regex.py  test_cli.py  test_config_loading.py  test_config_precedence.py  test_doctor_command.py  test_errors.py  test_excludes_applied.py  test_github_download.py  test_gitutils.py  test_html_escapes.py  test_logging.py  test_runner.py  test_safety_error_handling.py  test_sarif_generation.py  test_store_resilience.py  test_verbose.py  test_vulnerable.py
tests/acceptance/: __init__.py  test_exit_code_thresholds.py
tests/integration/: test_init_flow.py
tests/perf/: __init__.py  test_performance_smoke.py
