[project]
name = "specify-cli"
version = "0.1.0a3"
description = "Specify CLI, part of GitHub Spec Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "click>=8.1",
    "pydantic>=2.8",
    "platformdirs>=4.3",
    "httpx[socks]",
    "readchar",
    "truststore>=0.10.4",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
analysis = [
    "bandit[toml]>=1.7.8",
    "safety>=3.2.4",
    "radon>=6.0.1",
]
reporting = [
    "jinja2>=3.1.4",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6.9",
    "black>=24.8",
    "mypy>=1.11",
]

[project.scripts]
specify = "specify_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--cov=src/specify_cli --cov-report=term-missing --cov-report=html"


