[project]
name = "specify-cli"
version = "0.1.0a4"
description = "Specify CLI, part of GitHub Spec Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Den Delimarsky", email = "dend@github.com"},
    {name = "John Lam", email = "jflam@github.com"},
]
maintainers = [
    {name = "Den Delimarsky", email = "dend@github.com"},
    {name = "John Lam", email = "jflam@github.com"},
]
keywords = [
    "specification-driven-development",
    "sdd",
    "spec-kit",
    "ai-assisted-development",
    "github-copilot",
    "claude",
    "security-scanning",
    "bandit",
    "safety",
    "sarif",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0,<1.0",
    "rich>=13.7.0,<15.0",
    "click>=8.1.0,<9.0",
    "pydantic>=2.8.0,<3.0",
    "platformdirs>=4.3.0,<5.0",
    "httpx[socks]>=0.27.0,<0.28",
    "readchar>=4.1.0,<5.0",
    "truststore>=0.10.4,<0.11",
    "tomli>=2.0.1,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
analysis = [
    "bandit[toml]>=1.7.8,<2.0",
    "safety>=3.2.4,<4.0",
    "radon>=6.0.1,<7.0",
]
reporting = [
    "jinja2>=3.1.4,<4.0",
]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "respx>=0.21.0,<0.22",
    "ruff>=0.6.9,<0.7",
    "black>=24.8.0,<25.0",
    "mypy>=1.11.0,<2.0",
    "twine>=6.0.0,<7.0",
]

[project.scripts]
specify = "specify_cli.cli:app"

[project.urls]
Homepage = "https://github.com/Kxd395/Spec-Kit-Rehabilitation"
Documentation = "https://github.com/Kxd395/Spec-Kit-Rehabilitation/blob/main/README.md"
Repository = "https://github.com/Kxd395/Spec-Kit-Rehabilitation.git"
Issues = "https://github.com/Kxd395/Spec-Kit-Rehabilitation/issues"
Changelog = "https://github.com/Kxd395/Spec-Kit-Rehabilitation/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--cov=src/specify_cli --cov-report=term-missing --cov-report=html"
